# kairon

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts  营销帖子.md
.github/workflows/: ci.yml
scripts/: install.sh
server/: index.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ChatView.css  ChatView.tsx  SettingsModal.css  SettingsModal.tsx  Sidebar.css  Sidebar.tsx  WelcomeScreen.css  WelcomeScreen.tsx  WorkflowEditor.css  WorkflowEditor.tsx
src/components/nodes/: KaironNode.tsx
src/lib/: runtime.ts  tools.ts  workflow.ts
src/styles/: App.css  global.css
