[package]
name = "kairon"
version = "0.1.0"
description = "Kairon - Your personal AI computer. Open-source AI Agent desktop OS."
authors = ["Kairon Team"]
edition = "2021"

[lib]
name = "kairon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
